project/K8s/templates/pod_secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exp-app
spec:
  containers:
    - name: app-container
      image: tanees012/exp-app:latest
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: exp-app-secret
