project/K8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exp-app-service
spec:
  clusterIP: None  # Headless service for StatefulSet
  selector:
    app: exp-app
  ports:
    - protocol: TCP
      port: 3000
