project/K8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exp-app-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: exp-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exp-app-service
                port:
                  number: 3000
