project/K8s/templates/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: exp-app-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: exp-app-role
subjects:
  - kind: ServiceAccount
    name: default
    
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exp-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: exp-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: some-other-service
